@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cryptomator</groupId>
 	<artifactId>integrations-linux</artifactId>
-	<version>1.4.4</version>
+	<version>1.4.5</version>
 
 	<name>integrations-linux</name>
 	<description>Provides optional Linux services used by Cryptomator</description>
@@ -36,21 +36,21 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.jdk.version>21</project.jdk.version>
+		<project.jdk.version>22</project.jdk.version>
 
 		<!-- runtime dependencies -->
 
-		<api.version>1.3.0</api.version>
-		<secret-service.version>2.0.0-alpha</secret-service.version>
+		<api.version>1.3.1</api.version>
+		<secret-service.version>2.0.1-alpha</secret-service.version>
 		<kdewallet.version>1.4.0</kdewallet.version>
-		<appindicator.version>1.3.6</appindicator.version>
-		<slf4j.version>2.0.11</slf4j.version>
+		<slf4j.version>2.0.13</slf4j.version>
+		<appindicator.version>1.4.0</appindicator.version>
 
 		<!-- test dependencies -->
-		<junit.version>5.10.1</junit.version>
+		<junit.version>5.10.2</junit.version>
 
 		<!-- build plugin dependencies -->
-		<dependency-check.version>9.0.9</dependency-check.version>
+		<dependency-check.version>9.1.0</dependency-check.version>
 		<nexus-staging.version>1.6.8</nexus-staging.version>
 	</properties>
 
@@ -94,12 +94,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.12.1</version>
+				<version>3.13.0</version>
 				<configuration>
 					<release>${project.jdk.version}</release>
-					<compilerArgs>
-						<arg>--enable-preview</arg>
-					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -131,7 +128,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.3.0</version>
+				<version>3.3.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -194,7 +191,6 @@
 							<name>see</name>
 						</tag>
 					</tags>
-					<additionalOptions>--enable-preview</additionalOptions>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -216,7 +212,7 @@
 							<skipTestScope>true</skipTestScope>
 							<detail>true</detail>
 							<suppressionFile>suppression.xml</suppressionFile>
-							<nvdApiKey>${env.NVD_API_KEY}</nvdApiKey>
+							<nvdApiKeyEnvironmentVariable>NVD_API_KEY</nvdApiKeyEnvironmentVariable>
 						</configuration>
 						<executions>
 							<execution>
@@ -237,7 +233,7 @@
 				<plugins>
 					<plugin>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>3.1.0</version>
+						<version>3.2.4</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
@@ -298,7 +294,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-deploy-plugin</artifactId>
-						<version>3.1.1</version>
+						<version>3.1.2</version>
 					</plugin>
 				</plugins>
 			</build>
